--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -19,12 +19,16 @@
       referrerpolicy='no-referrer'
     />
 
+    {{! personal styles }}
+    <link rel='stylesheet' href='css/style.css' />
     <title>
       SimpleArtBoard
     </title>
   </head>
   <body>
-    {{{body}}}
+    <div class='container'>
+      {{{body}}}
+    </div>
 
     <script
       src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js'
