--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,17 @@
-<h1>
-  Login
-</h1>
+<h3>
+  <i class='fa-solid fa-palette'>
+  </i>
+  SimpleArtBoard
+</h3>
+<div class='section'>
+  <p class='lead'>
+    Create public and private art from your imagination
+  </p>
+</div>
+<div class='divider'></div>
+<div class='section'>
+  <a href='/auth/google' class='btn red darken-1'>
+    <i class='fab fa-google left'></i>
+    Log In With Google
+  </a>
+</div>
