--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -26,6 +26,7 @@
     </title>
   </head>
   <body>
+    {{> _header}}
     <div class='container'>
       {{{body}}}
     </div>
@@ -33,5 +34,10 @@
     <script
       src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js'
     ></script>
+
+    <script>
+      // materialize requires the sidenav to be initialized for the hamburger menu to work
+      M.Sidenav.init(document.querySelector('.sidenav'))
+    </script>
   </body>
 </html>
