--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,3 +1,51 @@
-<h1>
+<h6>
   Dashboard
-</h1>
+</h6>
+<h3>
+  Welcome {{name}}
+</h3>
+<p>
+  Here is your Artwork
+</p>
+
+{{#if stories}}
+  <table class='striped'>
+    <thead>
+      <tr>
+        <th>
+          Title
+        </th>
+        <th>
+          Date
+        </th>
+        <th>
+          Status
+        </th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      {{#each stories}}
+        <tr>
+          {{! handlebars automatically knows this is stories._id and stories.title because we are within the loop using #each stories }}
+          <td>
+            <a href='/stories/{{_id}}'></a>{{title}}
+          </td>
+          <td>
+            {{createdAt}}
+          </td>
+          <td>
+            <span class='dash-status'>
+              {{status}}
+            </span>
+          </td>
+          <td></td>
+        </tr>
+      {{/each}}
+    </tbody>
+  </table>
+{{else}}
+  <p>
+    You have note created any stories
+  </p>
+{{/if}}
