add add button partial and to main layout

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -26,7 +26,9 @@
     </title>
   </head>
   <body>
+    {{!-- handlebars partial --}}
     {{> _header}}
+    {{> _add_btn}}
     <div class='container'>
       {{{body}}}
     </div>
