add public stories page

--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -9,8 +9,8 @@
     </a>
     <ul class='sidenav' id='mobile-demo'>
       <li>
-        <a href='/artwork'>
-          Public Art
+        <a href='/stories'>
+          Public Stories
         </a>
       </li>
       <li>
