--- a/views/stories/edit.hbs
+++ b/views/stories/edit.hbs
@@ -15,14 +15,15 @@
     <div class='row'>
       <div class='input-field'>
         <select id='status' name='status'>
-          {{#select story.status}}
-            <option value='public' selected>
+          {{! select is the hbs helper function we named with story.status passed in }}
+          {{{pickOptionSelected story.status}}}
+          {{! <option value='public' selected>
               Public
             </option>
             <option value='private'>
               Private
-            </option>
-          {{/select}}
+            </option> }}
+          {{!-- {{/select}} --}}
         </select>
         <label for='status'>
           Status
